--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "superagent": "^3.8.2",
     "touch": "^3.1.0",
     "vue": "^2.6.8",
-    "vue-router": "^2.0.0"
+    "vue-router": "^2.0.0",
+    "node-sass": "^4.13.1"
   },
   "devDependencies": {
     "babel-runtime": "^6.26.0",
@@ -50,7 +51,6 @@
     "cypress": "^3.1.1",
     "cypress-file-upload": "^3.1.0",
     "less": "^3.0.4",
-    "node-sass": "^4.13.1",
     "rollup": "^1.2.2",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^8.3.0",
