--- a/frappe/website/doctype/portal_settings/portal_settings.json
+++ b/frappe/website/doctype/portal_settings/portal_settings.json
@@ -47,12 +47,22 @@
   }
  ],
  "issingle": 1,
- "modified": "2020-03-03 15:41:05.894424",
- "modified_by": "Administrator",
+ "modified": "2022-11-01 13:40:49.577082",
+ "modified_by": "saif@paralogic.io",
  "module": "Website",
  "name": "Portal Settings",
  "owner": "Administrator",
  "permissions": [
+  {
+   "create": 1,
+   "delete": 1,
+   "email": 1,
+   "print": 1,
+   "read": 1,
+   "role": "System Manager",
+   "share": 1,
+   "write": 1
+  },
   {
    "create": 1,
    "delete": 1,
