--- a/frappe/core/workspace/settings/settings.json
+++ b/frappe/core/workspace/settings/settings.json
@@ -345,7 +345,7 @@
    "type": "Link"
   }
  ],
- "modified": "2022-08-28 21:41:28.065190",
+ "modified": "2022-11-16 12:24:38.305192",
  "modified_by": "Administrator",
  "module": "Core",
  "name": "Settings",
@@ -354,8 +354,12 @@
  "public": 1,
  "quick_lists": [],
  "restrict_to_domain": "",
- "roles": [],
- "sequence_id": 29.0,
+ "roles": [
+  {
+   "role": "System Manager"
+  }
+ ],
+ "sequence_id": 20.0,
  "shortcuts": [
   {
    "icon": "setting",
