--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "express": "^4.16.2",
     "fast-deep-equal": "^2.0.1",
     "frappe-charts": "^1.3.2",
-    "frappe-datatable": "^1.15.3",
+    "frappe-datatable": "github:ParaLogicTech/datatable#v1.16.5",
     "frappe-gantt": "^0.5.0",
     "fuse.js": "^3.4.6",
     "highlight.js": "^9.18.1",
