--- a/frappe/website/doctype/website_settings/website_settings.json
+++ b/frappe/website/doctype/website_settings/website_settings.json
@@ -426,7 +426,8 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2022-12-05 04:17:56.478757",
+ "make_attachments_public": 1,
+ "modified": "2023-02-16 14:04:48.717788",
  "modified_by": "Administrator",
  "module": "Website",
  "name": "Website Settings",
