--- a/frappe/website/doctype/contact_us_settings/contact_us_settings.json
+++ b/frappe/website/doctype/contact_us_settings/contact_us_settings.json
@@ -23,8 +23,7 @@
   "email_id",
   "skype",
   "map_iframe",
-  "map_url",
-  "footer_logo_detail"
+  "map_url"
  ],
  "fields": [
   {
@@ -127,18 +126,13 @@
    "fieldname": "map_url",
    "fieldtype": "Data",
    "label": "Map URL"
-  },
-  {
-   "fieldname": "footer_logo_detail",
-   "fieldtype": "Small Text",
-   "label": "Footer Logo Detail"
   }
  ],
  "icon": "fa fa-cog",
  "idx": 1,
  "issingle": 1,
  "links": [],
- "modified": "2023-02-10 15:33:51.469388",
+ "modified": "2023-02-20 13:19:31.990922",
  "modified_by": "Administrator",
  "module": "Website",
  "name": "Contact Us Settings",
