--- a/frappe/website/doctype/website_settings/website_settings.json
+++ b/frappe/website/doctype/website_settings/website_settings.json
@@ -43,6 +43,7 @@
   "copyright",
   "address",
   "footer_items",
+  "footer_logo_detail",
   "footer_powered",
   "footer_template",
   "footer_template_values",
@@ -419,6 +420,11 @@
    "fieldname": "splash_image",
    "fieldtype": "Attach Image",
    "label": "Splash Image"
+  },
+  {
+   "fieldname": "footer_logo_detail",
+   "fieldtype": "Small Text",
+   "label": "Footer Logo Detail"
   }
  ],
  "icon": "fa fa-cog",
@@ -427,7 +433,7 @@
  "issingle": 1,
  "links": [],
  "make_attachments_public": 1,
- "modified": "2023-02-16 14:04:48.717788",
+ "modified": "2023-02-20 13:27:50.196199",
  "modified_by": "Administrator",
  "module": "Website",
  "name": "Website Settings",
